--- a/L1-EX1.html
+++ b/L1-EX1.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
     <title>For Immediate Release</title>
+    <link href="my.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
         <h1>For Immediate Release</h1>
@@ -15,6 +16,7 @@
     <li>Hong Kong,</li>
     <li>London,</li>
     <li>Los Angeles,</li>
+    <li>Melbourne,</li>
     <li>New York City,</li>
     <li>San Francisco,</li>
     <li>Sydney,</li>
